--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  background-color: pink;
+  border-radius: 15px;
+  width: 300px;
+  border-style: double;
+  border-color: red;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .App-logo {
@@ -26,6 +43,18 @@
 
 .App-link {
   color: #61dafb;
+}
+
+button {
+  background-color: white; /* Green */
+  border: 2px solid black;
+  color: maroon;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  font-size: 16px;
 }
 
 @keyframes App-logo-spin {
